--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Infinitydraft</title>
+  <title>Infinitydraft | Optimized fantasy sports lineup generator</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Generate hundreds of fantasy sports lineups optimized by fantasy points per game. Randomly permuted lineups available to copy and import to Draft Kings.">
